--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "description": "A parser for fis to compile tmodjs file.",
   "version": "0.1.4",
   "author": {
-    "name": "drakgon",
-    "email": "stardrakgon@gmail.com"
+    "name": "anota",
+    "email": "dada-yd@126.com"
   },
   "keywords": [
     "fis",
@@ -29,12 +29,12 @@
   "_npmVersion": "1.3.14",
   "_npmUser": {
     "name": "drakgon",
-    "email": "stardrakgon@gmail.com"
+    "email": "dada-yd@126.com"
   },
   "maintainers": [
     {
       "name": "drakgon",
-      "email": "stardrakgon@gmail.com"
+      "email": "dada-yd@126.com"
     }
   ],
   "directories": {},
